--- a/backend/config.env
+++ b/backend/config.env
@@ -19,10 +19,10 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
 
-EMAIL_FROM=winspropheticchapelinternation@gmail.com
+EMAIL_FROM=biossaknust@gmail.com
 
-GMAIL_USERNAME=winspropheticchapelinternation@gmail.com
-GMAIL_PASSWORD=ProphetWins
+GMAIL_USERNAME=biossaknust@gmail.com
+GMAIL_PASSWORD=Biossaknust
 
 # MAIL TRAP CONFIG
 EMAIL_USERNAME=231dc1a9287381
