Ready to publish

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,7 +1,7 @@
 # SYSTEM CONFIG 
 PORT=3000
-NODE_ENV=production
-# NODE_ENV=development
+# NODE_ENV=production
+NODE_ENV=development
 
 # DATABASE CONFIG
 MONGODB_LOCALDB=mongodb://0.0.0.0:27017/biossa-knust
