--- a/biossa-knust/package.json
+++ b/biossa-knust/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.12.5"
   },
