--- a/backend/config.env
+++ b/backend/config.env
@@ -11,5 +11,5 @@ JWT_SECRET=USE-A-UNIQUE-KEY-HERE-TO-AVOID-A-FOOLISH-HACK-OF-YOUR-USERS-INFO
 JWT_EXPIRES=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_FROM=biossaknust@gmail.com
+EMAIL_FROM=biossaknust31@gmail.com
 
