--- a/biossa-knust/package.json
+++ b/biossa-knust/package.json
@@ -22,12 +22,19 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-background-downloader": "^2.3.4",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.2.4",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.12.5",
+    "react-native-webview": "^13.13.2",
     "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
