--- a/biossa-knust/package.json
+++ b/biossa-knust/package.json
@@ -3,38 +3,48 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "expo start --clear",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/slider": "^4.5.5",
+    "@kesha-antonov/react-native-background-downloader": "^3.2.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "axios": "^1.7.9",
-    "expo": "^52.0.16",
-    "expo-constants": "~17.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.2",
-    "expo-splash-screen": "~0.29.7",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^54.0.30",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-image-picker": "~17.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.21",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
     "jwt-decode": "^4.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-background-downloader": "^2.3.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.4",
-    "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.13.2",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
