--- a/biossa-knust/package.json
+++ b/biossa-knust/package.json
@@ -4,27 +4,40 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --clear",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
     "@kesha-antonov/react-native-background-downloader": "^3.2.6",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-community/slider": "5.0.1",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/drawer": "^7.7.10",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.6.13",
     "axios": "^1.7.9",
     "expo": "^54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
+    "expo-permissions": "^14.4.0",
+    "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -33,11 +46,15 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-document-picker": "^9.3.1",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "1.18.5",
+    "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.4",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -45,7 +62,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-wheel-color-picker": "^1.3.1"
+    "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
