--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,8 @@
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "validator": "^13.12.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "expo-server-sdk": "^4.9.0"
   },
   "engines": {
     "node": "18.x"
