--- a/biossa-knust/android/app/build.gradle
+++ b/biossa-knust/android/app/build.gradle
@@ -95,6 +95,20 @@ android {
         versionCode 1
         versionName "1.0.0"
 
+        ndk {
+            abiFilters  "arm64-v8a"
+        }
+
+        splits {
+            abi {
+                enable true
+                reset()
+                include "arm64-v8a"
+                universalApk false
+            }
+        }
+
+        
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
     signingConfigs {
